concord_macros/tests/usage/fail/fail_non_credential_acquire_as.stderr
error[E0599]: no method named `acquire_as_session` found for struct `PendingRequest<'a, Cx, E, T>` in the current scope
  --> tests/usage/fail/fail_non_credential_acquire_as.rs:33:16
   |
33 |     api.ping().acquire_as_session().await?;
   |                ^^^^^^^^^^^^^^^^^^ method not found in `PendingRequest<'_, UsageNonCredentialAcquireApiCx, EpPingHe9bee119c6a37b89, ReqwestTransport>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `UsageNonCredentialAcquireApiAcquireAsSessionExt` defines an item `acquire_as_session`, perhaps you need to implement it
  --> tests/usage/fail/fail_non_credential_acquire_as.rs:14:1
   |
14 | / api! {
15 | |     client UsageNonCredentialAcquireApi {
16 | |         base "https://example.com"
17 | |         credential session = endpoint auth_api::LoginForSession
...  |
29 | |         -> Json<String>
30 | | }
   | |_^
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)
